src/objects/Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archived_At__c</fullName>
        <label>Archived At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled_at__c</fullName>
        <label>Cancelled_at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Moved_Out__c</fullName>
        <label>Date Moved Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ended_On__c</fullName>
        <label>Ended On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Last_Sync__c</fullName>
        <label>ID Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Move_Out_Type__c</fullName>
        <label>Move Out Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_in_Type__c</fullName>
        <label>Move In Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moved_Out__c</fullName>
        <formula>TODAY()&gt;Ended_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moved Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reservable__c</fullName>
        <label>Reservable</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Started_On__c</fullName>
        <label>Started On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Moved_Out__c</columns>
        <columns>Move_in_Type__c</columns>
        <columns>Move_Out_Type__c</columns>
        <columns>Reservable__c</columns>
        <columns>Date_Moved_Out__c</columns>
        <columns>Started_On__c</columns>
        <columns>Ended_On__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reservations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>